fix list item alignment

--- a/styles.css
+++ b/styles.css
@@ -93,9 +93,12 @@ main {
   background: rgba(0,0,0,.26);
   color: white;
   font-size: 20px;
-  display: inline-flex;
   align-items: center;
   justify-content: center;
+}
+
+.mdc-list--two-line .mdc-list-item__text {
+  align-self: unset;
 }
 
 .skills {
